# pviz-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
adapters/: canonical.py  payloads.py
adapters/analyzer_bridge/: __init__.py  bridge_payloads.py  core.py  internals.py  provenance.py
analyzer/: __init__.py  analyzer_types.py  ast_common.py  build_classic.py  config.py  dead_code.py  discovery_manifest.py  duplicate_code.py  extract_crosstalk.py  fs.py  imports_lex.py  index.py  l2_method_usage.py  module_map.py  module_resolve.py  parse.py
analyzer/go/: __init__.py  go_build_artifacts.py  go_canonical.py  go_config.py  go_folder_index.py  go_nodefacts_symbols.py  go_parse.py  go_parse_dispatch.py  go_run.py
analyzer/java/: java_build_artifacts.py  java_canonical.py  java_config.py  java_folder_index.py  java_nodefacts_symbols.py  java_parse_dispatch.py  java_run.py
analyzer/java/java_parse/: __init__.py  engine.py  javaparser_engine.py  models.py  regex_engine.py
analyzer/kotlin/: kotlin_build_artifacts.py  kotlin_canonical.py  kotlin_config.py  kotlin_folder_index.py  kotlin_nodefacts_symbols.py  kotlin_parse_dispatch.py  kotlin_run.py
analyzer/kotlin/parse_kotlin/: __init__.py  engine.py  models.py
analyzer/py/: py_run.py
analyzer/ruby/: __init__.py  ruby_build_artifacts.py  ruby_call_index.py  ruby_canonical.py  ruby_config.py  ruby_folder_index.py  ruby_nodefacts_symbols.py  ruby_parse_dispatch.py  ruby_rails_index.py  ruby_require_resolver.py  ruby_run.py
analyzer/ruby/parse_ruby/: __init__.py  engine.py  models.py
analyzer/rust/: rust_build_artifacts.py  rust_canonical.py  rust_config.py  rust_folder_index.py  rust_nodefacts_symbols.py  rust_parse_dispatch.py  rust_run.py
analyzer/rust/rust_parse/: __init__.py  engine.py  models.py
analyzer/ts/: __init__.py  build_artifacts.py  canonical_web.py  config.py  discover.py  extract_crosstalk.py  extract_imports.py  model.py  parser_runtime.py  resolve_imports.py  run.py  symbols_js.py  tsconfig_paths.py  write_artifacts.py
analyzer_store/: coverage.py  edge_pass.py  folder_index.py  followup_assess.py  integration.py  io_utils.py  nodefacts.py  types.py  validators.py
contracts/: types.py
core/: artifacts.py  artifacts_headless.py  build_context.py  json_export.py  store_root.py  workspace_core.py  zones_ctx.py  zones_headless.py
core/artifact_sets_merge/: __init__.py  api.py  config.py  crosstalk.py  discovery.py  edges.py  folder_index.py  io.py  meta.py  metrics.py  nodes.py  normalize.py  publish.py  scc.py
core/build_pipeline/: JS_P_Crosstalk.py  P_JS_Crosstalk.py  __init__.py  buckets.py  followups.py  json_io.py  normalize.py  pipeline.py  types.py
core/pkgzones/: builder.py  contracts.py  placement.py  state.py
diagnostics/: events.py  logging.py
i_o/: __init__.py  diagnostics_export.py  export_json.py  export_pdf.py  layout_store.py  path_utils.py  workspace_io.py  workspace_manager.py
i_o/export_llm_json/: __init__.py  artifacts.py  builders_discovery.py  builders_folders.py  builders_node_order.py  builders_nodes_edges.py  builders_zones.py  errors.py  export.py  summary.py  utils.py
i_o/export_llm_json/json_compression/: __init__.py  edge_codecs.py  format_guide.py  node_codecs.py  nodes.py  path_legend.py  run.py  types.py  util.py
pviz_parser/: __init__.py  cli.py
